--- a/Client-Project-main/Client WebApp/appsettings.json
+++ b/Client-Project-main/Client WebApp/appsettings.json
@@ -14,5 +14,14 @@
     "Issuer": "yourIssuer",
     "Audience": "yourAudience"
   },
+  "EmailSettings": {
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 587,
+    "SenderEmail": "trailblazersgosss@gmail.com",
+    "SenderName": "Client ",
+    "Username": "trailblazersgosss@gmail.com",
+    "Password": "pizpdmhirlmcoycj",
+    "EnableSsl": true
+  },
   "ApiBaseUrl": "https://localhost:7165/api"
 }
