--- a/Client-Project-main/Client WebApp/Client WebApp.csproj
+++ b/Client-Project-main/Client WebApp/Client WebApp.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <Folder Include="Data\" />
+    <Folder Include="Models\Report\" />
     <Folder Include="wwwroot\images\" />
     <Folder Include="wwwroot\js\" />
     <Folder Include="wwwroot\lib\bootstrap\" />
